--- a/index.html
+++ b/index.html
@@ -3,18 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>single-product-splash-zone</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Tech FLow</title>
+    <meta name="description" content="A Demo Site for Tech-Flow" />
+    <meta name="author" content="Isaiah Rumph" />
 
-    <meta property="og:title" content="single-product-splash-zone" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Tech FLow" />
+    <meta property="og:description" content="A Demo Site for Tech-Flow" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="" />
     <meta name="twitter:image" content="" />
+
+        <link rel="icon" href="/favicon.png" type="image/png">
+    <link rel="shortcut icon" href="/favicon.png" type="image/png">
   </head>
 
   <body>
